# of_flows

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Examples/: nflows_nnx_diffrax.ipynb
Examples/.ipynb_checkpoints/: H2_training-checkpoint.ipynb
examples/: H2_loading_quadrature.ipynb  H2_training.ipynb  LiH_1D_NNX.ipynb  nflows_eqx_diffrax.ipynb
of_flows/: main.py  utils.py
of_flows/config/: _config.py
of_flows/dft_distrax/: __init__.py  dft_distrax.py
of_flows/flow/: __init__.py  discrete_radial_flow.py  equiv_flows.py
of_flows/functionals/: __init__.py  core_correction.py  exchange_correlation.py  external.py  functional.py  hartree.py  kinetic.py
of_flows/ode_solver/: __init__.py  eqx_ode.py
of_flows/promolecular/: __init__.py  promolecular_dist.py  sto3g_prior.py
of_flows/train/: __init__.py  loop.py  loss.py  utils.py
off/: __init__.py  atom_energies.py  main.py  plot_binding_csv.py  plot_pes_ema.py  plot_pes_mpl.py  quadrature.py  quadrature_scan.py  scan_pes.py  test_fwd_rev.py  utils.py
off/config/: _config.py
off/dft_distrax/: __init__.py
off/flow/: __init__.py  equiv_flows.py
off/functionals/: __init__.py  core_correction.py  exchange_correlation.py  external.py  functional.py  hartree.py  kinetic.py
off/ode_solver/: __init__.py  eqx_ode.py
off/promolecular/: __init__.py  promolecular_dist.py
off/train/: __init__.py  loop.py  loss.py
