[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "off"
version = "0.1.0"
authors = [
    {name = "Alexandre de Camargo", email = "decamara@mcmaster.ca"},
]
description = "A library for learning the ground state energy using orbital free density functional theory with continuous normalizing flows."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jax>=0.6.0",
    "jaxlib>=0.6.0",
    "equinox>=0.12.0",
    "diffrax>=0.7.0",
    "optax>=0.2.0",
    "scipy>=1.15.0",
    "chex>=0.1.89",
    "jaxtyping>=0.3.0",
    "distrax>=0.1.5",
    "pyscf>=2.7.0",
    "pandas>=2.0.3",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10.0",
    "chex>=0.1.89",
    "numpy>=2.3.0",
]
# GPU (NVIDIA, CUDA 12): `pip install "off[gpu]"`. JAX then runs on the GPU
# automatically when one is present and falls back to CPU otherwise. The base
# install (plain jax/jaxlib) is CPU-only and works on every platform.
gpu = ["jax[cuda12]>=0.6.0"]

# The 'atom_db' prior needs AtomDB, which is not on PyPI. A direct-URL dependency
# here would block uploading `off` to PyPI, so it is not listed; install it per
# the AtomDB docs: https://atomdb.qcdevs.org/api/index.html

[project.urls]
Homepage = "https://github.com/AlexandreDeCamargo/of_flows"
Repository = "https://github.com/AlexandreDeCamargo/of_flows"

[project.scripts]
off-train = "off.main:main"
off-quadrature = "off.quadrature:main"

[tool.setuptools.packages.find]
include = ["off*"]
