[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "off"
version = "0.1.1"
authors = [
    {name = "Alexandre de Camargo", email = "decamara@mcmaster.ca"},
]
description = "A library for learning the ground state energy using orbital free density functional theory with continuous normalizing flows."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jax>=0.6.0",
    # GPU is the default on Linux x86_64 (CUDA 12). macOS/Windows have no CUDA
    # wheels, so they install the CPU build automatically. JAX then selects
    # GPU-or-CPU at runtime (uses the GPU when present, else falls back to CPU).
    "jax[cuda12]>=0.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "jaxlib>=0.6.0",
    "equinox>=0.12.0",
    "diffrax>=0.7.0",
    "optax>=0.2.0",
    "scipy>=1.15.0",
    "chex>=0.1.89",
    "jaxtyping>=0.3.0",
    "distrax>=0.1.5",
    "pyscf>=2.7.0",
    "pandas>=2.0.3",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10.0",
    "chex>=0.1.89",
    "numpy>=2.3.0",
]
# GPU is not an extra: it is the default on Linux x86_64 via the marker on the
# core `jax[cuda12]` dependency above. macOS/Windows get the CPU build.

# The 'atom_db' prior needs AtomDB, which is not on PyPI. A direct-URL dependency
# here would block uploading `off` to PyPI, so it is not listed; install it per
# the AtomDB docs: https://atomdb.qcdevs.org/api/index.html

[project.urls]
Homepage = "https://github.com/AlexandreDeCamargo/of_flows"
Repository = "https://github.com/AlexandreDeCamargo/of_flows"

[project.scripts]
off-train = "off.main:main"
off-quadrature = "off.quadrature:main"

[tool.setuptools.packages.find]
include = ["off*"]
